Fix description overlap problem

--- a/4_css-javascript-fundamentals/javascript_challenges/7_build-a-search-bar/alt_solution/styles.css
+++ b/4_css-javascript-fundamentals/javascript_challenges/7_build-a-search-bar/alt_solution/styles.css
@@ -15,7 +15,6 @@ img {
 /*  Carousel  */
 
 .carousel {
-    position: relative;
     max-width: 800px;
     margin: 50px auto 0 auto;
     filter: drop-shadow(0 2px 5px gray);
@@ -30,6 +29,7 @@ img {
 
 .carousel-item-visible img{
     display: block;
+    position: relative;
     animation-duration: 500ms;
     animation-name: fadeIn;
 }
@@ -54,11 +54,13 @@ li {
 .sub-title {
     font-weight: 600;
 }
-/*TODO -- HTML -- Description: fix overlap*/
+
 .description {
     box-sizing: border-box;
     font-size: 12px;
     text-align: right;
+    margin: 0;
+    padding: 6px;
 }
 
 .title {
@@ -83,43 +85,30 @@ li {
 }
 
 .details {
-    line-height: 1.5rem;
-    margin-bottom: 10px;
     list-style-type: none;
     display: grid;
-    justify-content: right;
+    margin: 0;
+}
+
+.imdb {
+    margin-bottom: 0;
 }
 
 .imdb-logo {
     width: 45px;
-    margin-top: 9px;
 }
 
 /* Image Description Media Queries */
 @media screen and (min-width: 600px){
     .title {
-        font-size: 18px;
+        font-size: 2.62vw;
     }
 
     .description {
-        font-size: 12px;
+        font-size: 1.72vw;
         position: absolute;
-        top: 60%;
-        left: 69%;
-        min-width: 150px;
-        max-width: 250px;
-    }
-}
-
-@media screen and (min-width: 700px){
-    .title {
-        font-size: 26px;
-    }
-
-    .description {
-        font-size: 17px;
-        top: 65%;
-        left: 72%;
+        bottom: 23.5px;
+        right: 6px;
     }
 }
 
@@ -185,6 +174,13 @@ li {
 .progress-bar {
     display: flex;
     justify-content: center;
+}
+
+/* Progress-bar: keep height consistent for overlay */
+@media screen and (min-width: 600px){
+    .progress-bar {
+        height: 23.5px;
+    }
 }
 
 .bar {
